# boids

./: .gitignore  CMakeLists.txt  ]  vcpkg.json
.github/workflows/: cmake-multi-platform-vcpkg.yml
include/: boid.h  flock.h  gui.h
src/: boid.c  flock.c  gui.c  main.c
